fix: parent/body scroll/spacing issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,12 +1,25 @@
 html {
   height: 100%;
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
 }
 
 body {
   min-height: 100%;
   background-color: black;
+  margin: 0;
+}
+
+.xterm-wrap {
+  height: 100vh;
+  padding: 8px;
+  display: flex;
+  flex-direction: column;
 }
 
 #xterm-container, .terminal.xterm {
-  height: 100vh;
+  flex: 1;
 }
